<resources>
    <string name="app_name">TipCalculater</string>
    <string name="action_settings">Settings</string>

    <string name="input_check_amount_hint">Check</string>
    <string name="input_tip_percentage_hint">Tip Percentage</string>

    <string name="total_output_label">Total</string>
    <string name="tip_output_label">Tip</string>
    <string name="check_amount_output_label">Check</string>

    <string name="dollar_amount">$%1$.02f</string>


    <string name="save_hint">Enter Location</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>

    <string name="action_load">Load</string>

</resources>
