<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculation_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/view_margin"
    android:paddingBottom="@dimen/view_padding_bottom"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.MainActivity"
    tools:showIn="@layout/activity_main">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_check_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/input_check_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/input_check_amount_hint"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_tip_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_check_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/input_tip_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/input_tip_percentage_hint"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/calculation_outputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_tip_percentage">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bill_amount"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="$20.00" />

            <TextView
                android:id="@+id/bill_amount_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_amount_output_label"
                tools:text="Check"
                android:textAlignment="center" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tip_dollar_amount"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="$11.50" />

            <TextView
                android:id="@+id/tip_dollar_amount_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="Tip"
                android:text="@string/tip_output_label" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_dollar_amount"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="$31.50" />

            <TextView
                android:id="@+id/total_dollar_amount_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_output_label"
                tools:text="Total"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>




</android.support.constraint.ConstraintLayout>